/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

/*
 * Protocol Buffers describing the Artifact API, for communicating with a runner
 * for artifact staging and retrieval over GRPC.
 */

syntax = "proto3";

package org.apache.beam.runner_api.v1;

option java_package = "org.apache.beam.sdk.common.runner.v1";
option java_outer_classname = "ArtifactApi";

// A service to stage artifacts for use in a Job.
//
// RPCs made to an ArtifactStagingService endpoint should include some form of identification for
// the job as a header.
service ArtifactStagingService {
  // Stage an artifact to be available during job execution. The first request must contain the
  // name of the artifact. All future requests must contain sequential chunks of the content of
  // the artifact.
  rpc PutArtifact(stream PutArtifactRequest) returns (PutArtifactResponse);

  // Commit a collection of artifacts to be used within a job.
  rpc CommitManifest(CommitManifestRequest) returns (CommitManifestResponse);
}

// A service to retrieve artifacts for use in a Job.
service ArtifactRetrievalService {
  // Get the manifest for the job
  rpc GetManifest(GetManifestRequest) returns (Manifest);

  // Get an artifact staged for the job. The requested artifact must be within the manifest
  rpc GetArtifact(GetArtifactRequest) returns (stream ArtifactChunk);
}

// An artifact identifier and associated metadata.
message Artifact {
  // (Required) The name of the artifact.
  string name = 1;

  // (Optional) The Unix-like permissions of the artifact
  int32 permissions = 2;

  // (Optional) The md5 checksum of the artifact
  string md5 = 3;
}

// A collection of artifacts.
message Manifest {
  repeated Artifact artifact = 1;
}

// A request to get the manifest of the Job.
message GetManifestRequest {}

// A request to get the manifest of the Job.
message GetManifestResponse {
  Manifest manifest = 1;
}

message GetArtifactRequest {
  string name = 1;
}

message ArtifactChunk {
  bytes data = 1;
}

message PutArtifactRequest {
  oneof content {
    string name = 1;
    ArtifactChunk data = 2;
  }
}

message PutArtifactResponse {
}

message CommitManifestRequest {
  Manifest manifest = 1;
}

message CommitManifestResponse {
  string staging_token = 1;
}

